appId: com.zaimimran.almari
# UC-F06-09
---
- runFlow: ../lib/sample-closet.yaml
- scrollUntilVisible:
    element:
      id: "start-hijab"
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd
- tapOn:
    id: "start-hijab"
- extendedWaitUntil:
    visible:
      id: "today-outfit"
    timeout: 60000
- scrollUntilVisible:
    element:
      id: "start-hijab"
    direction: DOWN
    centerElement: true
- assertVisible:
    id: "start-hijab"
    text: "(.*, )?checked"
- scrollUntilVisible:
    element:
      id: "start-knit"
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd
- tapOn:
    id: "start-knit"
- extendedWaitUntil:
    visible:
      id: "start-knit"
      text: "(.*, )?checked"
    timeout: 60000
- assertVisible:
    id: "start-hijab"
    checked: false
- scrollUntilVisible:
    element: "Start with a piece.*"
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd
- tapOn: "Start with a piece.*"
- extendedWaitUntil:
    notVisible:
      id: "today-start-with"
    timeout: 10000
